@@ -30,6 +30,11 @@ COM_CATEGORIES_FIELDSET_RULES="Category Permissions"
 COM_CATEGORIES_ITEMS_SEARCH_FILTER="Search"
 COM_CATEGORIES_N_ITEMS_ARCHIVED="%d categories successfully archived"
 COM_CATEGORIES_N_ITEMS_ARCHIVED_1="%d category successfully archived"
+COM_CATEGORIES_N_ITEMS_ASSIGNED="%d items are assigned to this category."
+COM_CATEGORIES_N_ITEMS_ASSIGNED_1="%d item is assigned to this category."
+COM_CATEGORIES_DELETE_NOT_ALLOWED="Delete not allowed for category %s. "
+COM_CATEGORIES_HAS_SUBCATEGORY_ITEMS="%d items are assigned to this category's subcategories."
+COM_CATEGORIES_HAS_SUBCATEGORY_ITEMS_1="%d item is assigned to one of this category's subcategories."
 COM_CATEGORIES_N_ITEMS_DELETED="%d categories successfully deleted"
 COM_CATEGORIES_N_ITEMS_DELETED_1="%d category successfully deleted"
 COM_CATEGORIES_N_ITEMS_PUBLISHED="%d categories successfully published"
