@@ -1,0 +1,16 @@
+<?xml version="1.0" encoding="utf-8"?>
+<extension version="1.6" type="plugin" group="content">
+	<name>plg_content_joomla</name>
+	<author>Joomla! Project</author>
+	<creationDate>November 2010</creationDate>
+	<copyright>Copyright (C) 2005 - 2010 Open Source Matters. All rights reserved.</copyright>
+	<license>GNU General Public License version 2 or later; see LICENSE.txt</license>
+	<authorEmail>admin@joomla.org</authorEmail>
+	<authorUrl>www.joomla.org</authorUrl>
+	<version>1.6.0</version>
+	<description>PLG_CONTENT_JOOMLA_XML_DESCRIPTION</description>
+	<files>
+		<filename plugin="joomla">joomla.php</filename>
+		<filename>index.html</filename>
+	</files>
+</extension>
